--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"
+    />
     <title>Before and After</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <p class="demo-p">
+        This is the ::before and ::after demo.
+      </p>
+    </div>
+  </body>
 </html>
