Changed FA cdn and created new markup

--- a/index.html
+++ b/index.html
@@ -6,15 +6,23 @@
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+      integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+      crossorigin="anonymous"
     />
     <title>Before and After</title>
   </head>
   <body>
     <div>
-      <p class="demo-p">
+      <!-- <p class="demo-p">
         This is the ::before and ::after demo.
-      </p>
+      </p> -->
+      <a href="https://google.com" class="demo-link" target="_blank"
+        >Google.com</a
+      >
+      <a href="https://youtube.com" class="demo-link" target="_blank"
+        >Youtube.com</a
+      >
     </div>
   </body>
 </html>
